Removed support for big endian byte order
- Removed support for accepting and replaying data using the big
  endian byte order, since the assignment specifically asks for
  the wire format to be in little endian.

- Dropped big endian support nuget packages.

- Reworked the readme file.

--- a/replay-server/replay-server.csproj
+++ b/replay-server/replay-server.csproj
@@ -3,11 +3,8 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp2.1</TargetFramework>
+        <RuntimeIdentifiers>linux-x64</RuntimeIdentifiers>
         <RootNamespace>Seed.CodingAssessment</RootNamespace>
     </PropertyGroup>
-
-    <ItemGroup>
-      <PackageReference Include="Be.IO-netstandard" Version="1.0.3" />
-    </ItemGroup>
 
 </Project>
